# AVA_the_lead_generation_agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  sample_companies.csv  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/ai-worker/: .env.example  README.md  main.py  package.json  pyproject.toml
apps/ai-worker/app/: campaign_context.py  main.py  oversight.py
apps/ai-worker/app/crawler/: classify_page.py  crawl_company.py  discover_links.py  fetch_page.py  normalize.py  url_safety.py
apps/ai-worker/app/drafting/: angle_selector.py  email_generator.py  linkedin_generator.py  quality_checker.py
apps/ai-worker/app/enrichment/: apollo_client.py  contact_discovery.py  contact_enrichment.py  fallback_contact_discovery.py  source_enrichment.py
apps/ai-worker/app/extraction/: company_profile_extractor.py  contact_profile_extractor.py  keyword_matcher.py  signal_extractor.py
apps/ai-worker/app/scoring/: fit_score.py
apps/ai-worker/app/services/: database.py  llm_client.py  service_logger.py
apps/ai-worker/app/social/: linkedin_posts.py  linkedin_public_scraper.py
apps/ai-worker/tests/: test_hardening_helpers.py
apps/api/: .env.example  README.md  package.json
apps/api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/api/test/: app.e2e-spec.ts
apps/web/: .env.example  README.md  package.json  tailwind.config.js
apps/web/app/: globals.css  page.tsx
(+57 files in other folders)
