[project]
name = "ai-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bullmq>=2.25.2",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "motor>=3.7.1",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "redis>=6.4.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.49.0",
]
